workspaces/liferay-learn-workspace/client-extensions/liferay-learn-global-css/assets/global.css
/* ... */
.learn-card,
.section-card {
	border: 1px solid rgba(9, 16, 24, 0.12);
	border-radius: var(--border-radius-lg);
	box-shadow: 0 6px 15px -6px rgba(9, 16, 29, 0.06);
	cursor: pointer;
	flex: 0 0 calc(50% - var(--spacer-3));
	padding: var(--spacer-3, 1rem);

	&:hover {
		background-color: var(--color-action-primary-hover-10, #edf3fe);
		border-color: var(--color-brand-primary-darken-1, #0053f0);
	}

	h4 {
		font-size: 1.125rem;
		margin: 0;
	}

	.subsection-wrapper {
		margin-top: var(--spacer-2);
	}
}

.learn-category a {
	color: var(--color-neutral-10, #282934);
	font-weight: 600;
	text-decoration: underline;

	&:hover {
		color: var(--color-action-primary-hover, #0053f0);
	}
}

.learn-search {
	.input-group-item {
		.input-group {
			.input-group-inset-item .btn {
				padding-right: 1rem;
			}

			.input-group-inset-item-after {
				border-bottom-right-radius: 3rem;
				border-top-right-radius: 3rem;

				.lexicon-icon {
					color: var(--primary);
					fill: var(--primary);
					height: 2rem;
					width: 2rem;
				}
			}

			.input-group-inset-after.form-control {
				border-bottom-left-radius: 3rem;
				border-top-left-radius: 3rem;
				font-size: var(--h5-font-size);
				line-height: 20px;
				padding: 1rem;

				&::placeholder {
					font-size: var(--h5-font-size);
				}
			}
		}
	}
}

.pagination-bar {
	align-items: flex-start;
	display: flex;
	gap: 1rem;

	.dropdown.pagination-items-per-page {
		align-items: flex-start;
		display: flex;
	}

	.dropdown.pagination-items-per-page .dropdown-toggle.page-link {
		align-items: center;
		border-width: 0;
		color: var(--color-action-neutral-default, #2b3a4b);
		display: flex;
		font-size: 0.875rem;
		font-style: normal;
		font-weight: 600;
		gap: 0.25rem;
		justify-content: center;
		line-height: 1rem;
		text-align: center;
	}

	.pagination-bar
		.dropdown.pagination-items-per-page
		.dropdown-toggle.page-link
		.c-inner {
		align-items: center;
		display: flex;
		height: 1rem;
		justify-content: center;
	}

	.pagination-bar
		.dropdown.pagination-items-per-page
		.dropdown-toggle.page-link
		.c-inner
		.lexicon-icon.lexicon-icon-caret-double-l {
		align-items: center;
		display: flex;
		flex-shrink: 0;
		height: 1rem;
		justify-content: center;
		width: 1rem;
	}

	.pagination {
		align-items: flex-start;
		display: flex;
		gap: 0.5rem;
		justify-content: center;
	}

	.pagination .page-item .page-link {
		align-items: center;
		border-radius: 0.375rem;
		border-width: 0;
		color: var(--color-action-neutral-default, #2b3a4b);
		display: flex;
		font-size: 0.875rem;
		font-style: normal;
		font-weight: 600;
		gap: 0.25rem;
		justify-content: center;
		line-height: 1rem;
		min-width: 2rem;
		padding: 0.5rem;
		text-align: center;
	}

	.pagination .page-item.active .page-link {
		background: var(--color-action-neutral-active-20, #d5d8db);
		z-index: 2;
	}

	.pagination-results {
		align-items: flex-start;
		color: var(--color-neutral-10, #282934);
		display: flex;
		font-size: 0.8125rem;
		font-style: normal;
		font-weight: 400;
		gap: 0.25rem;
		line-height: 1rem;
	}
}

.search-bar-suggestions
	> .input-group-item
	> .input-group
	> .input-group-inset-item
	> .btn-unstyled
	> .lexicon-icon-search {
	color: var(--color-brand-primary, #0b5fff);
	height: 2rem;
	width: 2rem;
}

.search-results {
	.search-results-entry {
		align-items: flex-start;
		display: flex;
		flex-direction: column;
		gap: 0.25rem;
	}

	.search-results-entry .search-results-entry-title {
		border-radius: 0.625rem;
		color: #0b5fff;
		font-size: 1rem;
		font-style: normal;
		font-weight: 600;
		line-height: 1.5rem;
		padding: 1rem;
	}

	.search-results-entry .search-results-entry-title .published-date {
		color: var(--color-state-neutral-darken-1, #6c6c75);
		font-size: 0.8125rem;
		font-style: normal;
		font-weight: 400;
		line-height: 1rem;
	}

	.search-results-entry
		.search-results-entry-title
		.search-results-entry-content {
		color: var(--color-neutral-10, #282934);
		font-size: 1rem;
		font-style: normal;
		font-weight: 400;
		line-height: 1.5rem;
	}

	.search-results-entry .search-results-entry-title:hover {
		background: var(--color-action-primary-hover-10, #edf3fe);
	}

	.solid {
		border-top: 1px solid var(--color-neutral-2, #e2e2e4);
	}
}

.t-paragraph-lg {
	font-size: var(--text-paragraph-lg-font-size);
}

.token.comment,
.token.prolog,
.token.doctype,
.token.cdata {
	color: var(--info-l1);
}

.token.punctuation {
	color: var(--secondary);
}

.token.namespace {
	opacity: 0.7;
}

.token.property,
.token.tag,
.token.constant,
.token.symbol,
.token.deleted {
	color: var(--danger-l1);
}

.token.boolean,
.token.number {
	color: var(--chart-3);
}

.token.selector,
.token.attr-name,
.token.string,
.token.char,
.token.builtin,
.token.inserted {
	color: var(--white);
}

.token.operator,
.token.entity,
.token.url,
.language-css .token.string,
.style .token.string,
.token.variable {
	color: var(--secondary-l1);
}

.token.atrule,
.token.attr-value,
.token.function,
.token.class-name {
	color: var(--success-l1);
}

.token.keyword {
	color: var(--primary-l3);
}

.token.regex,
.token.important {
	color: var(--chart-4);
}

.token.important,
.token.bold {
	font-weight: bold;
}
.token.italic {
	font-style: italic;
}

.token.entity {
	cursor: help;
}

